# psmux

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  psmux.json
.github/workflows/: ci.yml  release.yml
crates/portable-pty-psmux/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
crates/portable-pty-psmux/src/win/: conpty.rs  psuedocon.rs
crates/vt100-psmux/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/vt100-psmux/src/: attrs.rs  cell.rs  lib.rs  perform.rs  row.rs  screen.rs  term.rs
docker/: Dockerfile  README.md  Run-PsmuxDev.ps1
docker/Profile/: Microsoft.PowerShell_profile.ps1
docker/Tools/: ImportVsDevEnv.ps1  InstallAll.ps1  InstallGit.ps1  InstallOpenSSH.ps1  InstallRust.ps1  InstallVsBuildTools.ps1  StartContainer.ps1
docs/: claude-code.md  compatibility.md  configuration.md  keybindings.md  mouse-ssh.md  multi-shell.md  performance.md  plugins.md  warm-sessions.md
examples/: latency_harness.rs  pty_diag.rs  test_cursor_debug.rs  test_cursor_issue52.rs
release/psmux-0.2.2-windows-x64/: LICENSE  README.md
scoop/: psmux.json
scripts/: perf-trace.ps1  test_scroll_inject.ps1
src/: app.rs  cli.rs  client.rs  commands.rs  config.rs  copy_mode.rs  debug_log.rs  format.rs  help.rs  input.rs  layout.rs  main.rs  pane.rs  platform.rs  rendering.rs  server.rs  session.rs  ssh_input.rs  style.rs  tree.rs  types.rs  util.rs  window_ops.rs
src/server/: connection.rs  helpers.rs  mod.rs  options.rs
tests/: _run_batch3.ps1  bench_startup_exit.ps1  diag_cursor_claude.ps1  diag_cursor_raw.ps1  disable_processed_input.ps1  mouse_diag.ps1  run_all_tests.ps1  test_alt_key.ps1  test_bind_key.ps1  test_bind_pipe_key.ps1  test_bug_detection.ps1  test_bugfixes.ps1  test_capture_pane.ps1  test_cjk_paste_split.ps1  test_claude_agent_teams.ps1  test_claude_compat_fixes.ps1  test_claude_cursor_diag.ps1  test_claude_mouse.ps1  test_cli_handlers.ps1  test_config.ps1  test_config_plugin_loading.ps1  test_conpty_mouse.ps1  test_copy_mode_bracket_paragraph.ps1  test_copy_mode_full.ps1  test_cross_shell_backslash.ps1  test_cursor_fallback.ps1  test_cursor_style.ps1  test_debug_focus.ps1  test_default_shell_cmd.ps1  test_default_shell_wsl.ps1  test_e2e_latency.ps1  test_e2e_regression_perf.ps1  test_env_shim.ps1  test_extreme_perf.ps1  test_features.ps1  test_features2.ps1  test_features3.ps1  test_features4.ps1  test_format_vars.ps1  test_github_issues.ps1  (+75 more)
