[package]
name = "psmux"
version = "0.2.7"
edition = "2021"
description = "Terminal multiplexer for Windows - tmux alternative for PowerShell and Windows Terminal"
license = "MIT"
repository = "https://github.com/marlocarlo/psmux"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tmux", "windows", "powershell"]
categories = ["command-line-utilities"]

# Windows only
[target.'cfg(not(windows))'.dependencies]
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
] }

[[bin]]
name = "psmux"
path = "src/main.rs"

[[bin]]
name = "pmux"
path = "src/main.rs"

[[bin]]
name = "tmux"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.28"
portable-pty = "0.2"
which = "6"
chrono = "0.4"
vt100 = "0.16"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
simd-json = { version = "0.15", optional = true, default-features = false, features = ["serde_impl"] }

[features]
default = []
simd-json = ["dep:simd-json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
