[package]
name = "psmux"
version = "0.4.10"
edition = "2021"
description = "Terminal multiplexer for Windows - tmux alternative for PowerShell and Windows Terminal"
license = "MIT"
repository = "https://github.com/marlocarlo/psmux"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tmux", "windows", "powershell"]
categories = ["command-line-utilities"]
exclude = [
    "target/",
    "release/",
    "tests/",
    "packages/",
    "psmux-windows-x86_64/",
    ".github/",
    "scripts/",
    "scoop/",
    "examples/",
    "*.txt",
]

# Windows only
[target.'cfg(not(windows))'.dependencies]
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
] }

[[bin]]
name = "psmux"
path = "src/main.rs"

[[bin]]
name = "pmux"
path = "src/main.rs"

[[bin]]
name = "tmux"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
portable-pty = { version = "0.9.1", path = "crates/portable-pty-psmux", package = "portable-pty-psmux" }
which = "8"
chrono = "0.4"
vt100 = { version = "0.16", package = "vt100-psmux" }
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
